--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "recharts": "^2.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,8 +54,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "minimatch": ">=3.0.5",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.19",
-    "minimatch": ">=3.0.5"
+    "tailwindcss": "^3.0.19"
   }
 }
